--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Aplikasi Buku Kas Umum</title>
+<title>Aplikasi Buku Kas Umum Jemaat GKE Yerusalem Tamiang Layang</title>
 <link rel="icon" href="" />
 <style>
 /* ---------- Basic ---------- */
