--- a/index.html
+++ b/index.html
@@ -119,48 +119,46 @@ th { background:#eef6ff; font-weight:600; }
     <div id="msg" class="small"></div>
   </div>
 
-  <!-- FILTER + LAPORAN -->
-  <div class="card">
-    <h3>Laporan Bulanan</h3>
+ <div class="card">
+  <h3>Laporan Bulanan</h3>
 
-    <div class="laporan-filter">
-      <div class="filter-item">
-        <label>Pilih Bulan</label>
-        <select id="bulan"></select>
-      </div>
-
-      <div class="filter-item">
-  <label>Dari Bulan</label>
-  <select id="dariBulan"></select>
-</div>
-
+  <div class="laporan-filter" style="flex-direction:column;">
 <div class="filter-item">
-  <label>Sampai Bulan</label>
-  <select id="sampaiBulan"></select>
+  <label>Pilih Bulan</label>
+  <select id="bulan"></select>
 </div>
 
-<div class="filter-item filter-btn">
-  <button id="lihatRentang">Laporan Rentang Bulan</button>
-</div>
-
-
-      <div class="filter-item">
-        <label>Tanggal Laporan (untuk cetak)</label>
-        <input type="date" id="tanggalLaporan">
-      </div>
-
-      <div class="filter-item filter-btn">
-        <button id="lihat">Tampilkan Laporan</button>
-      </div>
-
-      <div class="filter-item filter-btn">
-        <button id="downloadPDF" class="btn-print-green">Download PDF</button>
-      </div>
+    <div class="filter-item">
+      <label>Dari Bulan</label>
+      <select id="dariBulan"></select>
     </div>
 
-    <div id="loadingLaporan" class="small"><b>Memuat laporan...</b></div>
-    <div id="laporan" style="margin-top:24px;"></div>
+    <div class="filter-item">
+      <label>Sampai Bulan</label>
+      <select id="sampaiBulan"></select>
+    </div>
+
+    <div class="filter-item">
+      <label>Tanggal Laporan (untuk cetak)</label>
+      <input type="date" id="tanggalLaporan">
+    </div>
+
+    <div class="filter-item filter-btn">
+      <button id="lihatRentang">Laporan Rentang Bulan</button>
+    </div>
+
+    <div class="filter-item filter-btn">
+      <button id="lihat">Tampilkan Laporan Bulanan</button>
+    </div>
+
+    <div class="filter-item filter-btn">
+      <button id="downloadPDF" class="btn-print-green">Download PDF</button>
+    </div>
+
   </div>
+
+  <div id="loadingLaporan" class="small"><b>Memuat laporan...</b></div>
+  <div id="laporan" style="margin-top:24px;"></div>
 
 </div>
 
@@ -509,6 +507,150 @@ async function loadRentang(dari, sampai, year){
 
   document.getElementById('laporan').innerHTML = html;
   document.getElementById('loadingLaporan').style.display = 'none';
+}
+/* ========== render laporan rentang bulan ========== */
+async function loadAndRenderRange(dariBulan, sampaiBulan, tahun) {
+  try {
+    document.getElementById('loadingLaporan').style.display = 'block';
+
+    const cfg = await loadConfig();
+    const tanggalDipilih = document.getElementById('tanggalLaporan').value;
+    let tanggalFormatted = tanggalDipilih
+      ? new Date(tanggalDipilih).toLocaleDateString('id-ID', { day:'numeric', month:'long', year:'numeric' })
+      : new Date().toLocaleDateString('id-ID', { day:'numeric', month:'long', year:'numeric' });
+
+    const semua = await loadAllTransactions();
+
+    /* saldo awal = semua transaksi sebelum 'dariBulan' */
+    const saldoAwal = hitungSaldoAwalSemua(semua, dariBulan, tahun);
+
+    /* ambil transaksi rentang bulan */
+    let tx = semua.filter(r =>
+      r.tahun === tahun &&
+      r.bulan >= dariBulan &&
+      r.bulan <= sampaiBulan
+    );
+
+    /* urutkan berdasarkan tanggal ASC */
+    tx.sort((a,b) => new Date(a.tanggal) - new Date(b.tanggal));
+
+    /* mulai membuat HTML laporan */
+    let html = "";
+
+    if(cfg.header_url){
+      html += `
+        <div style="text-align:center;margin-bottom:6px;">
+          <img src="${cfg.header_url}" style="max-width:720px;width:100%;height:auto;">
+        </div>`;
+    }
+
+    html += `
+    <h2 style="text-align:center;margin:6px 0;">
+      Buku Kas Umum<br>${cleanQuotes(cfg.subyek || "")}
+    </h2>
+
+    <div style="text-align:center;font-weight:600;margin-bottom:8px;">
+      Laporan Rentang Bulan – ${monthName(dariBulan)} s/d ${monthName(sampaiBulan)} ${tahun}
+    </div>
+
+    <div style="text-align:center;margin-bottom:12px;">
+      Tanggal Laporan: ${tanggalFormatted}
+    </div>
+    `;
+
+    html += `
+    <div class="table-wrapper"><table><thead><tr>
+      <th style="width:48px">No</th>
+      <th style="width:110px">Tgl</th>
+      <th>Bulan</th>
+      <th>Uraian</th>
+      <th class="right">Penerimaan</th>
+      <th class="right">Pengeluaran</th>
+      <th class="right">Saldo</th>
+      <th style="width:140px" class="no-print">Aksi</th>
+    </tr></thead><tbody>`;
+
+    let saldo = Number(saldoAwal);
+
+    /* saldo awal */
+    html += `
+      <tr style="font-weight:700;background:#f6f7f9;">
+        <td>1</td>
+        <td></td>
+        <td>${monthName(dariBulan)}</td>
+        <td>Saldo Awal</td>
+        <td></td>
+        <td></td>
+        <td class="right">${saldo.toLocaleString()}</td>
+        <td class="no-print"></td>
+      </tr>
+    `;
+
+    window.currentTransactions = tx.slice();
+
+    let idx = 2, totalIn = 0, totalOut = 0;
+
+    tx.forEach(t => {
+      const masuk = t.jenis === "Penerimaan" ? t.nominal : 0;
+      const keluar = t.jenis === "Pengeluaran" ? t.nominal : 0;
+      totalIn += masuk;
+      totalOut += keluar;
+      saldo += masuk - keluar;
+
+      /* Pada laporan rentang bulan — Aksi edit/hapus hanya untuk bulan pertama */
+      let aksiBtn = "";
+      if(t.bulan === dariBulan){
+        aksiBtn = `
+          <button class="btn-edit no-print" onclick="editTransaksi('${t.id}')">Edit</button>
+          <button class="btn-danger no-print" onclick="hapusTransaksi('${t.id}')">Hapus</button>
+        `;
+      }
+
+      html += `
+        <tr>
+          <td>${idx++}</td>
+          <td>${t.tanggal}</td>
+          <td>${monthName(t.bulan)}</td>
+          <td>${escapeHtml(t.uraian)}</td>
+          <td class="right">${masuk ? masuk.toLocaleString() : ""}</td>
+          <td class="right">${keluar ? keluar.toLocaleString() : ""}</td>
+          <td class="right">${saldo.toLocaleString()}</td>
+          <td class="no-print">${aksiBtn}</td>
+        </tr>`;
+    });
+
+    html += `
+      </tbody>
+      <tfoot><tr style="font-weight:700;background:#eaf2ff;">
+        <td colspan="4" class="right">Total</td>
+        <td class="right">${totalIn.toLocaleString()}</td>
+        <td class="right">${totalOut.toLocaleString()}</td>
+        <td class="right">${saldo.toLocaleString()}</td>
+        <td class="no-print"></td>
+      </tr></tfoot>
+      </table></div>
+    `;
+
+    html += `
+      <div style="text-align:right;margin-top:18px;margin-bottom:6px;">
+        ${cleanQuotes(cfg.lokasi || "")}, ${tanggalFormatted}
+      </div>
+
+      <div class="sign-area">
+        <div class="box">Ketua<br><br><br><b>${cleanQuotes(cfg.ketua || "")}</b></div>
+        <div class="box">Bendahara<br><br><br><b>${cleanQuotes(cfg.bendahara || "")}</b></div>
+      </div>
+    `;
+
+    document.getElementById('laporan').innerHTML = html;
+    document.getElementById('loadingLaporan').style.display = 'none';
+
+  } catch (err) {
+    console.error("loadAndRenderRange error", err);
+    document.getElementById('laporan').innerHTML =
+      '<div class="small">Gagal memuat laporan rentang bulan.</div>';
+    document.getElementById('loadingLaporan').style.display = 'none';
+  }
 }
 
 /* ========== CRUD ========== */
