--- a/index.html
+++ b/index.html
@@ -135,19 +135,20 @@ th { background:#eef6ff; font-weight:600; }
   <!-- ====== BAGIAN 1: LAPORAN PER BULAN ====== -->
   <h4 style="margin-top:15px;">🔷 Laporan Bulanan</h4>
 
-  <div class="filter-item">
-    <label>Pilih Bulan</label>
-    <select id="bulan"></select>
-  </div>
+  <!-- LAPORAN BULANAN -->
+<div class="filter-item">
+  <label>Pilih Bulan</label>
+  <select id="bulan"></select>
+</div>
 
-  <div class="filter-item">
-    <label>Pilih Tahun</label>
-    <select id="tahun"></select>
-  </div>
+<div class="filter-item">
+  <label>Pilih Tahun</label>
+  <select id="tahun"></select>
+</div>
 
-  <div class="filter-item filter-btn">
-    <button id="lihat">Tampilkan Laporan Bulanan</button>
-  </div>
+<div class="filter-item filter-btn">
+  <button id="lihat">Tampilkan Laporan Bulanan</button>
+</div>
 
 
   <!-- ====== BAGIAN 2: LAPORAN RENTANG BULAN ====== -->
