--- a/index.html
+++ b/index.html
@@ -845,8 +845,12 @@ document.getElementById('downloadPDF').addEventListener('click', function(){
 
 /* ========== BOOT ========== */
 /* Tidak ada loadAndRender otomatis! */
-initRentangDropdown();
+/* Boot */
+initMonthDropdown();     // <-- untuk laporan bulanan
+initYearDropdown();      // <-- untuk laporan bulanan
+initRentangDropdown();   // <-- untuk laporan rentang
 applyHeaderConfig();
+
 
 
 </script>
